@@ -1,3 +1,10 @@
+Mon Jan 10 06:27:33 2005  Chad Elliott  <elliott_c@ociweb.com>
+
+        * modules/AutomakeWorkspaceCreator.pm:
+
+          Before using the project name as a regular expression, we must
+          escape all of the regular expression specific characters.
+
 Fri Jan  7 13:59:31 2005  Chad Elliott  <elliott_c@ociweb.com>
 
         * modules/Creator.pm:
